--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[160 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0                                                                    "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Feature</th>\n",
-       "      <th>Mean</th>\n",
+       "      <th>Mean Accuracy Drop</th>\n",
        "      <th>Standard Deviation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -724,25 +724,42 @@
        "</div>"
       ],
       "text/plain": [
-       "                                      Feature      Mean  Standard Deviation\n",
-       "0   Rating on Previous Fixed Quarter Date BBB  0.281622            0.010257\n",
-       "1    Rating on Previous Fixed Quarter Date BB  0.230148            0.009061\n",
-       "2     Rating on Previous Fixed Quarter Date A  0.107111            0.005848\n",
-       "3     Rating on Previous Fixed Quarter Date B  0.079304            0.004862\n",
-       "4    Rating on Previous Fixed Quarter Date AA  0.013898            0.002093\n",
-       "5   Rating on Previous Fixed Quarter Date CCC  0.012949            0.001282\n",
-       "6               Total Non-Current Liabilities  0.000867            0.000612\n",
-       "7                  Total Stockholders' Equity  0.000809            0.000366\n",
-       "8           Research and Development Expenses  0.000789            0.000284\n",
-       "9                             Net Receivables  0.000779            0.000314\n",
-       "10                          Gunning-Fog Score  0.000764            0.000307\n",
-       "11                             Dividends Paid  0.000663            0.000504\n",
-       "12                  Other Current Liabilities  0.000659            0.000388\n",
-       "13                             Debt Repayment  0.000631            0.000402\n",
-       "14                       Numeric Transparency  0.000543            0.000469"
+       "                                      Feature  Mean Accuracy Drop  \\\n",
+       "0   Rating on Previous Fixed Quarter Date BBB            0.281622   \n",
+       "1    Rating on Previous Fixed Quarter Date BB            0.230148   \n",
+       "2     Rating on Previous Fixed Quarter Date A            0.107111   \n",
+       "3     Rating on Previous Fixed Quarter Date B            0.079304   \n",
+       "4    Rating on Previous Fixed Quarter Date AA            0.013898   \n",
+       "5   Rating on Previous Fixed Quarter Date CCC            0.012949   \n",
+       "6               Total Non-Current Liabilities            0.000867   \n",
+       "7                  Total Stockholders' Equity            0.000809   \n",
+       "8           Research and Development Expenses            0.000789   \n",
+       "9                             Net Receivables            0.000779   \n",
+       "10                          Gunning-Fog Score            0.000764   \n",
+       "11                             Dividends Paid            0.000663   \n",
+       "12                  Other Current Liabilities            0.000659   \n",
+       "13                             Debt Repayment            0.000631   \n",
+       "14                       Numeric Transparency            0.000543   \n",
+       "\n",
+       "    Standard Deviation  \n",
+       "0             0.010257  \n",
+       "1             0.009061  \n",
+       "2             0.005848  \n",
+       "3             0.004862  \n",
+       "4             0.002093  \n",
+       "5             0.001282  \n",
+       "6             0.000612  \n",
+       "7             0.000366  \n",
+       "8             0.000284  \n",
+       "9             0.000314  \n",
+       "10            0.000307  \n",
+       "11            0.000504  \n",
+       "12            0.000388  \n",
+       "13            0.000402  \n",
+       "14            0.000469  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,6 +792,8 @@
     "permutation_importance = permutation_importance.rename(columns={'Clean Column Name': 'Feature'})\n",
     "# Reorder columns to put Feature first\n",
     "permutation_importance = permutation_importance[['Feature', 'Mean', 'Standard Deviation']]\n",
+    "# Rename Mean to 'Mean Accuracy Drop'\n",
+    "permutation_importance = permutation_importance.rename(columns={'Mean': 'Mean Accuracy Drop'})\n",
     "# Get top 15\n",
     "pi_top_15 = permutation_importance.head(15)\n",
     "\n",
@@ -803,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +887,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
