--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[160 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0                                                                    "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Feature</th>\n",
+       "      <th>Permuted Feature</th>\n",
        "      <th>Mean Accuracy Drop</th>\n",
        "      <th>Standard Deviation</th>\n",
        "    </tr>\n",
@@ -724,7 +724,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                      Feature  Mean Accuracy Drop  \\\n",
+       "                             Permuted Feature  Mean Accuracy Drop  \\\n",
        "0   Rating on Previous Fixed Quarter Date BBB            0.281622   \n",
        "1    Rating on Previous Fixed Quarter Date BB            0.230148   \n",
        "2     Rating on Previous Fixed Quarter Date A            0.107111   \n",
@@ -759,7 +759,7 @@
        "14            0.000469  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,6 +794,8 @@
     "permutation_importance = permutation_importance[['Feature', 'Mean', 'Standard Deviation']]\n",
     "# Rename Mean to 'Mean Accuracy Drop'\n",
     "permutation_importance = permutation_importance.rename(columns={'Mean': 'Mean Accuracy Drop'})\n",
+    "# Rename Feature to 'Permuted Feature'\n",
+    "permutation_importance = permutation_importance.rename(columns={'Feature': 'Permuted Feature'})\n",
     "# Get top 15\n",
     "pi_top_15 = permutation_importance.head(15)\n",
     "\n",
@@ -822,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +889,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
