--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Permutation_Importance_Top_15.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Permutation_Importance_Top_15.tex
@@ -1,7 +1,7 @@
 \tiny
 \begin{tabular}{ccc}
 \toprule
-Feature & Mean Accuracy Drop & Standard Deviation \\
+Permuted Feature & Mean Accuracy Drop & Standard Deviation \\
 \midrule
 Rating on Previous Fixed Quarter Date BBB & 0.281622 & 0.010257 \\
 Rating on Previous Fixed Quarter Date BB & 0.230148 & 0.009061 \\
