correct xgboost code

--- a/Code/Modelling/XGBoost/XGBoost_Rating_Model.ipynb
+++ b/Code/Modelling/XGBoost/XGBoost_Rating_Model.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model 1\n",
-    "First, we only use the Altman_Z as covariate\n"
+    "# model 4\n",
+    "\n",
+    "using all features\n"
    ]
   },
   {
@@ -43,7 +44,7 @@
     "df = load_data()\n",
     "\n",
     "# Load the JSON file\n",
-    "with open('feature_columns.json', 'r') as file:\n",
+    "with open('../feature_columns.json', 'r') as file:\n",
     "    column_data = json.load(file)"
    ]
   },
@@ -186,7 +187,7 @@
    ],
    "source": [
     "# Train model\n",
-    "best_model = train_model_with_grid_search(X_train_scaled, y_train,len(custom_mapping), 'rating_model_1')"
+    "best_model = train_model_with_grid_search(X_train_scaled, y_train,len(custom_mapping), 'rating_model_4')"
    ]
   },
   {
@@ -223,7 +224,7 @@
    ],
    "source": [
     "# Evaluate model\n",
-    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, 'rating_model_1')"
+    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, 'rating_model_4')"
    ]
   }
  ],
