average rating over time

--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -13,3 +13,4 @@
 \renewcommand{\shareNotChanges}{94.66\%}
 \renewcommand{\shareNotChanges}{94.66\%}
 \renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
