draft model features excel

--- a/Code/Modelling/Logistic Regression/Rating Model - No Previous Rating/Logistic_Regression_No_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - No Previous Rating/Logistic_Regression_No_Previous_Rating_Model_1.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model 1\n",
-    "First, we only use the Altman_Z as covariate\n"
+    "# Model 1\n",
+    "\n",
+    "First, we only use Altman's Z as a covariate\n"
    ]
   },
   {
@@ -22,8 +23,7 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from Logistic_Regression_Functions import *\n",
-    "import json"
+    "from ..Logistic_Regression_Functions import *"
    ]
   },
   {
@@ -40,11 +40,7 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "df = load_data()\n",
-    "\n",
-    "# Load the JSON file\n",
-    "with open('feature_columns.json', 'r') as file:\n",
-    "    column_data = json.load(file)"
+    "df = load_data()"
    ]
   },
   {
