--- a/Code/Modelling/Logistic Regression/Rating Model - No Previous Rating/Logistic_Regression_No_Previous_Rating_Model_2.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - No Previous Rating/Logistic_Regression_No_Previous_Rating_Model_2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model 2\n",
+    "# Model 2\n",
     "\n",
-    "we only use tabular financial features\n"
+    "We use the tabular financial features and Sector\n"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from Logistic_Regression_Functions import *\n",
+    "from ..Logistic_Regression_Functions import *\n",
     "import json"
    ]
   },
