reconfigure logistic regression models excluding previous rating

--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model 1\n",
-    "\n",
-    "First, we only use Altman's Z as a covariate\n"
+    "# Model 1\n"
    ]
   },
   {
@@ -23,7 +21,9 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from ..Logistic_Regression_Functions import *"
+    "from ..Logistic_Regression_Functions import *\n",
+    "# Model name\n",
+    "model_name = 'exclude_previous_rating_model_1'"
    ]
   },
   {
@@ -45,25 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-04T20:39:04.129373Z",
-     "iopub.status.busy": "2024-04-04T20:39:04.128226Z",
-     "iopub.status.idle": "2024-04-04T20:39:04.136774Z",
-     "shell.execute_reply": "2024-04-04T20:39:04.135366Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Numeric features\n",
-    "numeric_feature_columns = [\"Altman_Z\"]\n",
-    "# Categorical features\n",
-    "cat_feature_columns = []\n",
-    "# Target column\n",
-    "target_column = \"Rating\"\n",
-    "# Create mapping\n",
-    "custom_mapping = {'AAA': 0, 'AA': 1, 'A': 2, 'BBB': 3, 'BB': 4, 'B': 5, 'CCC': 6,\"CC\":7,\"C\":8,\"D\":9}"
+    "# Get the column names and mapping\n",
+    "numeric_feature_columns, cat_feature_columns, target_column, custom_mapping = get_column_names_and_mapping(model_name)"
    ]
   },
   {
@@ -1126,7 +1113,7 @@
    ],
    "source": [
     "# Train model\n",
-    "best_model = train_model_with_grid_search(X_train_scaled, y_train, 'rating_model_1')"
+    "best_model = train_model_with_grid_search(X_train_scaled, y_train, model_name)"
    ]
   },
   {
@@ -1163,7 +1150,7 @@
    ],
    "source": [
     "# Evaluate model\n",
-    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, 'rating_model_1')"
+    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name)"
    ]
   }
  ],
