--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model 4 permutation importance"
+    "# Model 3 Permutation Importance"
    ]
   },
   {
@@ -21,9 +21,10 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from Logistic_Regression_Functions import *\n",
-    "import json\n",
-    "from sklearn.inspection import permutation_importance"
+    "from ..Logistic_Regression_Functions import *\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "# Model name\n",
+    "model_name = 'exclude_previous_rating_model_3'\n"
    ]
   },
   {
@@ -35,23 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-05T15:44:12.906985Z",
-     "iopub.status.busy": "2024-04-05T15:44:12.906633Z",
-     "iopub.status.idle": "2024-04-05T15:44:15.741561Z",
-     "shell.execute_reply": "2024-04-05T15:44:15.739931Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "df = load_data()\n",
-    "\n",
-    "# Load the JSON file\n",
-    "with open('feature_columns.json', 'r') as file:\n",
-    "    column_data = json.load(file)"
+    "df = load_data()"
    ]
   },
   {
@@ -67,14 +57,8 @@
    },
    "outputs": [],
    "source": [
-    "# Numeric features\n",
-    "numeric_feature_columns = column_data['tabular_feature_columns'] + column_data['nlp_feature_columns']\n",
-    "# Categorical features\n",
-    "cat_feature_columns = column_data['cat_feature_columns']\n",
-    "# Target column\n",
-    "target_column = column_data['target_column']\n",
-    "# Create mapping\n",
-    "custom_mapping = {'AAA': 0, 'AA': 1, 'A': 2, 'BBB': 3, 'BB': 4, 'B': 5, 'CCC': 6,\"CC\":7,\"C\":8,\"D\":9}"
+    "# Get the column names and mapping\n",
+    "numeric_feature_columns, cat_feature_columns, target_column, custom_mapping = get_column_names_and_mapping(model_name)"
    ]
   },
   {
@@ -614,8 +598,8 @@
     }
    ],
    "source": [
-    "# Load trained model '../../../Output/Modelling/Logistic Regression/rating_model_4/rating_model_4_best_estimator.pkl'\n",
-    "model = joblib.load('../../../Output/Modelling/Logistic Regression/rating_model_4/rating_model_4_best_estimator.pkl')\n",
+    "# Load trained model\n",
+    "model = joblib.load('../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_best_estimator.pkl')\n",
     "model"
    ]
   },
@@ -855,27 +839,42 @@
     "print('stds: ', len(result.importances_std))\n",
     "\n",
     "# Expanded feature column names\n",
-    "expanded_cat_cols = ['cat__rating_on_previous_fixed_quarter_date_A',\n",
-    "'cat__rating_on_previous_fixed_quarter_date_AA',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_AAA',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_B',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_BB',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_BBB',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_C',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_CC',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_CCC',\n",
-    " 'cat__rating_on_previous_fixed_quarter_date_D',\n",
-    " 'cat__Sector_Communication Services',\n",
-    " 'cat__Sector_Consumer Discretionary',\n",
-    " 'cat__Sector_Consumer Staples',\n",
-    " 'cat__Sector_Energy',\n",
-    " 'cat__Sector_Financials', \n",
-    " 'cat__Sector_Health Care',\n",
-    " 'cat__Sector_Industrials', \n",
-    " 'cat__Sector_Information Technology',\n",
-    " 'cat__Sector_Materials',\n",
-    " 'cat__Sector_Real Estate',\n",
-    " 'cat__Sector_Utilities']\n",
+    "# Version for include previous rating\n",
+    "if 'include_previous_rating' in model_name:\n",
+    "    expanded_cat_cols = ['cat__rating_on_previous_fixed_quarter_date_A',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_AA',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_AAA',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_B',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_BB',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_BBB',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_C',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_CC',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_CCC',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_D',\n",
+    "    'cat__Sector_Communication Services',\n",
+    "    'cat__Sector_Consumer Discretionary',\n",
+    "    'cat__Sector_Consumer Staples',\n",
+    "    'cat__Sector_Energy',\n",
+    "    'cat__Sector_Financials', \n",
+    "    'cat__Sector_Health Care',\n",
+    "    'cat__Sector_Industrials', \n",
+    "    'cat__Sector_Information Technology',\n",
+    "    'cat__Sector_Materials',\n",
+    "    'cat__Sector_Real Estate',\n",
+    "    'cat__Sector_Utilities']\n",
+    "# Version for exclude previous rating\n",
+    "if 'exclude_previous_rating' in model_name:\n",
+    "    expanded_cat_cols = ['cat__rating_on_previous_fixed_quarter_date_A',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_AA',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_AAA',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_B',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_BB',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_BBB',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_C',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_CC',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_CCC',\n",
+    "    'cat__rating_on_previous_fixed_quarter_date_D']\n",
+    "\n",
     "print('with expanded')\n",
     "print(len(numeric_feature_columns + expanded_cat_cols))\n",
     "\n",
@@ -889,7 +888,7 @@
     "result = pd.DataFrame({'feature': numeric_feature_columns + expanded_cat_cols, 'mean': result.importances_mean, 'std': result.importances_std})\n",
     "\n",
     "# Output to disk\n",
-    "result.to_parquet('../../../Output/Modelling/Logistic Regression/rating_model_4/rating_model_4_permutation_importance.parquet', index=False)\n",
+    "result.to_parquet('../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_permutation_importance.parquet', index=False)\n",
     "\n",
     "result"
    ]
