ready for exclude previous rating runs

--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -154,7 +154,7 @@
    ],
    "source": [
     "# Create matrices\n",
-    "_, X_test_scaled, _, y_test = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping, change=False)\n"
+    "_, X_test_scaled, _, y_test = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping)\n"
    ]
   },
   {
