all logistic regression rating models ready

--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3.ipynb
@@ -21,7 +21,12 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from ..Logistic_Regression_Functions import *\n",
+    "import sys\n",
+    "import os\n",
+    "# Add the parent directory to sys.path\n",
+    "sys.path.append(os.path.abspath('..'))\n",
+    "# Import module\n",
+    "from Logistic_Regression_Functions import *\n",
     "# Model name\n",
     "model_name = 'exclude_previous_rating_model_3'"
    ]
