--- a/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -29,7 +29,7 @@
     "# Import module\n",
     "from Logistic_Regression_Functions import *\n",
     "# Model name\n",
-    "model_name = 'exclude_previous_rating_model_3'"
+    "model_name = 'include_previous_rating_model_3'\n"
    ]
   },
   {
