code for changes in financial variables

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -2090,6 +2090,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Changes in Financial Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variables to difference\n",
+    "vars_to_diff = ['Altman_Z', 'Ratio_A', 'Ratio_B', 'Ratio_C', 'Ratio_D', 'Ratio_E', 'grossProfitRatio', 'ebitdaratio', 'operatingIncomeRatio', 'incomeBeforeTaxRatio', 'netIncomeRatio']\n",
+    "\n",
+    "# Version of the data that is company, fixed quarter date, these columns\n",
+    "previous_quarter_data = (merged[['ticker', 'fixed_quarter_date'] + vars_to_diff].rename(columns = {var: var + '_previous' for var in vars_to_diff})\n",
+    "                                                                                .rename(columns = {'fixed_quarter_date': 'previous_fixed_quarter_date'})\n",
+    "                        )\n",
+    "\n",
+    "# Join the previous quarter data\n",
+    "merged = pd.merge(merged, previous_quarter_data, on=['ticker', 'previous_fixed_quarter_date'], how='left')\n",
+    "\n",
+    "# Check for duplicates on ticker by fixed_quarter_date\n",
+    "print(merged[merged.duplicated(subset=['ticker', 'fixed_quarter_date'], keep=False)])\n",
+    "\n",
+    "# Create differenced variables\n",
+    "for var in vars_to_diff:\n",
+    "    merged[var + '_diff'] = merged[var] - merged[var + '_previous']\n",
+    "\n",
+    "# Print some examples\n",
+    "print(merged[['ticker', 'fixed_quarter_date', 'previous_fixed_quarter_date', 'Altman_Z', 'Altman_Z_previous', 'Altman_Z_diff']].head())\n",
+    "\n",
+    "# Delete '_previous' columns\n",
+    "merged.drop(columns = [var + '_previous' for var in vars_to_diff], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Drops based on date disagreements"
    ]
   },
