--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -604,7 +604,7 @@
    ],
    "source": [
     "# Load trained model\n",
-    "model = joblib.load('../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_best_estimator.pkl')\n",
+    "model = joblib.load('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_best_estimator.pkl')\n",
     "model"
    ]
   },
@@ -893,7 +893,7 @@
     "result = pd.DataFrame({'feature': numeric_feature_columns + expanded_cat_cols, 'mean': result.importances_mean, 'std': result.importances_std})\n",
     "\n",
     "# Output to disk\n",
-    "result.to_parquet('../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_permutation_importance.parquet', index=False)\n",
+    "result.to_parquet('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_permutation_importance.parquet', index=False)\n",
     "\n",
     "result"
    ]
