--- a/Code/Exploratory Data Analysis/Doc2Vec_Network/Visualize_Nodes_Edges.ipynb
+++ b/Code/Exploratory Data Analysis/Doc2Vec_Network/Visualize_Nodes_Edges.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[5933 rows x 603 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "[530 rows x 601 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "[140185 rows x 3 columns]"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "[886 rows x 2 columns]"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
        "[499 rows x 3 columns]"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
        "[140185 rows x 7 columns]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1838,7 @@
        "[2804 rows x 7 columns]"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1975,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600px\"\n",
-       "            src=\"pvn.html\"\n",
+       "            src=\"Doc2Vec_All_Data_Network_98th_Percentile_Cosine_Sim.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -1983,10 +1983,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22d15452fd0>"
+       "<IPython.lib.display.IFrame at 0x22d1a0498d0>"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2000,7 @@
     "pvn.show_buttons(filter_=['physics'])\n",
     "# use repulsion\n",
     "pvn.repulsion(node_distance=100)\n",
-    "pvn.show('pvn.html')"
+    "pvn.show('Doc2Vec_All_Data_Network_98th_Percentile_Cosine_Sim.html')"
    ]
   }
  ],
